--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -9,8 +9,11 @@
 
 <body>
 
-    <h3>Curent Share price: Google</h3>
+    <h2>Current Share price: Google</h2>
+    <div id="counter"></div>
+    <div id="line"></div>
     <div class="the-price" id="price">1000 €</div>
+    <div class="up-down" id="priceHistory"></div>
 
     <script src="./../scripts/index.js"></script>
 </body>
